ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Query Execution 2021-05-03, Query Execution 2021-05-17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      From this task:

      Unexpected failure for command: {
              "find" : "fuzzer_coll",
              "sort" : { 
                      "array" : 1,
                      "obj.str" : 1,
                      "obj.obj.obj.obj.obj.num" : -1, 
                      "_id" : 1 
              },  
              "limit" : NumberLong(18),
              "projection" : { 
                      "sortKey" : { 
                              "$meta" : "sortKey"
                      }   
              }   
      }
      uncaught exception:
      
      Error: Query failed.
      Version 1 returned result set: [...] // omitted for space
      Version 2 returned error: [Error: error: {                                                                                                                                                                                                                                                                                                                                
              "ok" : 0,
              "errmsg" : "PlanExecutor error during aggregation :: caused by :: Sort exceeded memory limit of 104857600 bytes, but did not opt in to external sorting. Aborting operation. Pass allowDiskUse:true to opt in.",
              "code" : 292,
              "codeName" : "QueryExceededMemoryLimitNoDiskUseAllowed"
      }] :
      assertQueryFuzzerErrorIsAcceptable@jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js:2167:15
      validateQueryResultsAndSort/<@jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js:2284:88
      validateQueryResults@jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js:528:13
      validateQueryResultsAndSort@jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js:2284:9
      _loop_1@jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js:2339:9
      runFindAndAggregate@jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js:2342:9
      main@jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js:2365:17
      @jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js:2371:1
      @jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js:1:2
      failed to load: jstestfuzz/out/query_fuzzer-2eaf33-1619674604379-0.js
      exiting with code -3
      

            Assignee:
            Martin Neupauer (Inactive)
            Reporter:
            Kyle Suarez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: