SERVER-56502 Sort triggers memory limit exceeded on only one version

The TopK sorter keeps track of how much memory it uses to hold the heap.
As it is addind and removing rows from the heap it adds/subtracts the
size of element from the total memory usage. The
KeyString::Value::memUsageForSorter is unfortunately unstable, it can
report different values at different times hence confusing the total
memory usage (it caused underflow).
The fix is to use a stable version KeyString::Value::getSize.